# rust-starter-project

./: .gitignore  Cargo.toml  README.me
migration/src/: lib.rs  m20220101_000001_create_table.rs  m20220101_000001_create_users.rs  m20250725_153600_create_roles.rs  m20250725_153700_create_abilities.rs  m20250725_153800_create_user_roles.rs  m20250725_153900_create_role_abilities.rs
src/: main.rs
src/controllers/: users_controller.rs
src/entity/: mod.rs  prelude.rs  users.rs
src/models/: api_error.rs  mod.rs  user.rs
src/routes/: users.rs
src/services/: user_service.rs
