[package]
name = "rust-project"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
axum-macros = "0.4"
dotenv = "0.15.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hyper = "1"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-native-tls", "macros", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
sea-orm = { version = "0.12", features = [ "sqlx-postgres", "runtime-tokio-rustls", "macros" ] }
bcrypt = "0.15"
